addet Impressum and datenschutz

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     </div>
     <div class="footer">
         <div class="footerLink">
-            <a href="datenschutz">Datenschutz</a>
+            <a href="Datenschutz.txt">Datenschutz</a>
             <p>|</p>
-            <a href="impressum">Impressum</a>
+            <a href="Impressum.txt">Impressum</a>
         </div>
     </div>
 
